--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue-form": "^4.9.0",
     "vue-loader": "^15.2.4",
     "vue-meta": "^1.4.0",
+    "vue-multiselect": "^2.1.3",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.0.0",
