--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,18 @@
 {
-  "presets": ["es2015", "stage-3"],
+  "presets": [
+    "es2015",
+    "stage-3"
+  ],
   "plugins": [
-    "transform-es2015-modules-commonjs"
+    "transform-es2015-modules-commonjs",
+    [
+      "transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false,
+        "regenerator": true,
+        "moduleName": "babel-runtime"
+      }
+    ]
   ]
 }
